<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.stefanblos.app2bucks.CreateOverUnderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_put_title"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:id="@+id/edittext_create_over_under_title"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/specify_over_under_value"
            android:inputType="numberDecimal"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:id="@+id/edittext_create_over_under_number"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/my_pick"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textSize="16sp"/>

            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:id="@+id/radiogroup_over_under"
                android:orientation="horizontal"
                android:checkedButton="@+id/toggle_over"
                android:background="@drawable/white_out_line">

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="OVER"
                    android:id="@+id/toggle_over"
                    android:background="@drawable/toggle_widget_background"
                    android:button="@null"/>

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="UNDER"
                    android:id="@+id/toggle_under"
                    android:background="@drawable/toggle_widget_background"
                    android:button="@null"/>

            </RadioGroup>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:text="@string/opponent"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/spinner_create_over_under_users"></Spinner>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/create_over_under_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:src="@android:drawable/ic_menu_send" />

</FrameLayout>
